compile.log
/main.cpp: In function ‘void readData(Reader&)’:
/main.cpp:89:35: error: ‘endl’ was not declared in this scope
             std::cerr<<"MESSAGE"<<endl;
                                   ^~~~
/main.cpp:89:35: note: suggested alternative:
In file included from /usr/include/c++/8/iostream:39,
                 from /main.cpp:4:
/usr/include/c++/8/ostream:590:5: note:   ‘std::endl’
     endl(basic_ostream<_CharT, _Traits>& __os)
     ^~~~
/main.cpp: In function ‘int main()’:
/main.cpp:148:49: warning: comparison of integer expressions of different signedness: ‘unsigned int’ and ‘int’ [-Wsign-compare]
                 if(reader.dataArray[i].dataIndex<min)
/main.cpp:180:27: warning: comparison of integer expressions of different signedness: ‘int’ and ‘std::vector<MessagePiece>::size_type’ {aka ‘long unsigned int’} [-Wsign-compare]
             for(int i=0; i<reader.receivedPieces.size(); i++)
                          ~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/main.cpp:182:29: warning: comparison of integer expressions of different signedness: ‘int’ and ‘std::vector<MessagePiece>::size_type’ {aka ‘long unsigned int’} [-Wsign-compare]
             for(int j=i+1; j<reader.receivedPieces.size(); j++)
                            ~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/main.cpp:192:23: warning: comparison of integer expressions of different signedness: ‘int’ and ‘std::vector<MessagePiece>::size_type’ {aka ‘long unsigned int’} [-Wsign-compare]
         for(int i=0; i<reader.receivedPieces.size(); i++)
                      ~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/main.cpp:109:9: warning: unused variable ‘z’ [-Wunused-variable]
     int z=0;
         ^